# ChangeLog for net-misc/asterisk-app_intercept
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_intercept/ChangeLog,v 1.2 2005/07/02 09:34:14 dholm Exp $

  02 Jul 2005; David Holm <dholm@gentoo.org>
  asterisk-app_intercept-20050623.ebuild:
  Added to ~ppc.

*asterisk-app_intercept-20050623 (01 Jul 2005)

  01 Jul 2005; Stefan Knoblich <stkn@gentoo.org> +metadata.xml,
  +files/app_intercept-20050623-astcfg.diff,
  +asterisk-app_intercept-20050623.ebuild:
  Initial import.
