@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/asterisk-app_intercept
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_intercept/ChangeLog,v 1.2 2005/07/02 09:34:14 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_intercept/ChangeLog,v 1.3 2005/08/29 02:31:35 stkn Exp $
+
+*asterisk-app_intercept-20050828 (29 Aug 2005)
+
+  29 Aug 2005; Stefan Knoblich <stkn@gentoo.org>
+  +asterisk-app_intercept-20050828.ebuild:
+  Version bump.
 
   02 Jul 2005; David Holm <dholm@gentoo.org>
   asterisk-app_intercept-20050623.ebuild:
